cmake_minimum_required(VERSION 3.19)
project(Wooffurs)

set(CMAKE_CXX_STANDARD 14)

#add_executable(Wooffurs main.cpp DogFactory.cpp DogFactory.h Dog.cpp Dog.h Pitbull.cpp Pitbull.h Doberman.cpp Doberman.h Rottweiler.cpp Rottweiler.h GermanShepherd.cpp GermanShepherd.h ChowChow.cpp ChowChow.h GreatDane.cpp GreatDane.h PresaCanario.cpp PresaCanario.h Akita.cpp Akita.h AlaskanMalamute.cpp AlaskanMalamute.h Husky.cpp Husky.h OtherBreed.cpp OtherBreed.h Constants.h)
add_executable(Wooffurs main.cpp DogFactory.cpp DogFactory.h Dog.cpp Dog.h Pitbull.cpp Pitbull.h Doberman.cpp Doberman.h Rottweiler.cpp Rottweiler.h GermanShepherd.cpp GermanShepherd.h ChowChow.cpp ChowChow.h GreatDane.cpp GreatDane.h PresaCanario.cpp PresaCanario.h Akita.cpp Akita.h)